--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/favicon.png">
+    
+    <link rel="icon" href="23.png">
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://kit.fontawesome.com/9e4922904d.js" crossorigin="anonymous"></script>
     <title>Chat App</title>
 </head>
 <body>
     <div class="centered-form"> 
         <div class="centered-form__box">
-            <h1>Join</h1>
+            <h1>Join Room</i></h1>
             <form action="/chat.html">
                 <label>
                     Display Name
                 </label>
-                <input type="text" name="username" placeholder="Display name" required>
+                <input class="indexinput" type="text" name="username" placeholder="Display name" required>
                 <label>
                     Room
                 </label>
-                <input type="text" name="room" placeholder="Room" required>
-                <button>Join</button>
+                <input class="indexinput" type="text" name="room" placeholder="Room" required>
+                <button class="indexbtn">Join</button>
             </form>
 
         </div>
     </div>
+    
 </body>
 </html>
